@@ -3,6 +3,10 @@
    Entries may not always be in chronological/commit order.
    See license at the end of file. */
 
+2025-11-10 21:39 UTC+0100 Aleksander Czajczynski (hb fki.pl)
+  * .github/workflows/windows.yml
+    * switch MSYS2 shell to CLANG64
+
 2025-11-10 21:21 UTC+0100 Aleksander Czajczynski (hb fki.pl)
   + base/libpq-inherit/Makefile
     + added pseudo-package to inherit and repackage libpq
